--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
     "bootstrap": "^4.5.2",
+    "chart.js": "^2.9.3",
     "express": "^4.17.1",
     "mssql": "^6.2.3",
     "ng2-charts": "^2.4.2",
