--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
+    "angular-cli-ghpages": "^1.0.0-rc.1",
     "bootstrap": "^4.5.2",
     "chart.js": "^2.9.3",
     "express": "^4.17.1",
